# kicad-xyce-plugin

./: .gitignore  .pep8  GEMINI.md  README.md  STYLE-GUIDE.md  STYLE_GUIDE.md  THIRD_PARTY_NOTICES.txt  conftest.py  metadata.json  pyproject.toml  requirements.txt  tox.ini  xyce-implementation.md
.github/workflows/: ci.yml
plugin/: config_dialog.py  config_dialog.qml  kicad_icons.py  main_window.py  main_window.qml  netlist_parser.py  plugin_config.py  run_simulator.py  run_xyce_simulation.py  simulation_dialog.py  simulation_dialog.qml
plugins/: config_dialog.py  expression.py  main_window.py  main_window.qml  netlist_parser.py  plugin.json
plugins/xyce_plugin/: kicad_icons.py  netlist_viewer_dialog.py  plugin_config.py  run_simulator.py  run_xyce_simulation.py  simulation_dialog.py  simulation_dialog.qml  window.py
skills/style-enforcer/: SKILL.md
src/: add_plot_dialog.py  add_plot_dialog.qml  chart.py  config_dialog.qml  expression.py  expression_manager.py  kicad_icons.py  main_window.py  netlist_parser.py  netlist_viewer_dialog.py  plugin.json  plugin.py  requirements.txt  run_simulator.py  run_xyce_simulation.py  simulation_dialog.py  simulation_dialog.qml  smith_chart_window.py  smith_chart_window.qml  step_tool_dialog.py  window.py  xyce_raw_file.py
src/config/: __init__.py  plugin_config.py  plugin_config_dialog.py
src/expression/: __init__.py  nodes.py  parser.py  tokens.py
src/kicad_xyce_plugin/: __main__.py  add_plot_dialog.py  add_plot_dialog.qml  chart.py  color_palette.py  decimation_algorithm.py  kicad.py  kicad_icons.py  main_window.py  main_window.qml  netlist_parser.py  requirements.txt  run_xyce_simulation.py  smith_chart_window.py  step_tool_dialog.py  step_tool_dialog.qml  xyce_raw_file.py
src/simulation_parameters/: __init__.py  ac_panel.py  ac_simulation_parameters.py  dc_simulation_parameters.py  four_parameters.py  hb_panel.py  hb_simulation_parameters.py  lin_panel.qml  lin_simulation_parameters.py  measure_parameters.py  noise_simulation_parameters.py  op_simulation_parameters.py  option_parameters.py  print_parameters.py  qmldir  sens_parameter.py  simulation_config.py  simulation_parameters.py  simulation_parameters_dialog.py  simulation_parameters_dialog.qml  tran_panel.py  transient_simulation_parameters.py
src/xyce_language/: __init__.py  evaluator.py
tests/: __init__.py  add_plot_dialog_qml_test.py  add_plot_dialog_test.py  chart_test.py  config_dialog_test.py  dc_simulation_dialog_test.py  decimation_algorithm_test.py  expression_manager_test.py  expression_test.py  kicad_icons_test.py  main_window_qml_test.py  main_window_test.py  netlist_parser_test.py  op_simulation_dialog_test.py  plugin_config_test.py  plugin_test.py  run_simulator_test.py  run_xyce_simulation_test.py  serialization_test.py  simulation_dialog_ui_test.py  smith_chart_window_qml_test.py  step_tool_dialog_qml_test.py  transient_simulation_dialog_test.py  window_test.py  xyce_language_test.py  xyce_raw_file_test.py
tests/config/: plugin_config_dialog_qml_test.py  plugin_config_dialog_test.py  plugin_config_test.py
tests/expression/: expression_manager_test.py  expression_test.py  xyce_language_test.py
tests/kicad_xyce_plugin/: add_plot_dialog_qml_test.py  add_plot_dialog_test.py  chart_test.py  decimation_algorithm_test.py  kicad_icons_test.py  main_window_qml_test.py  main_window_test.py  netlist_parser_test.py  run_xyce_simulation_test.py  smith_chart_window_qml_test.py  step_tool_dialog_qml_test.py  window_test.py  xyce_raw_file_test.py
tests/simulation_parameters/: ac_panel_qml_test.py  ac_simulation_parameters_test.py  dc_panel_qml_test.py  fft_parameters_test.py  (+22 more)
(+72 files in other folders)
