[build-system]
requires = ["hatchling", "hatch-kicad"]
build-backend = "hatchling.build"

[project]
name = "kicad-xyce-plugin"
version = "0.1.0"
description = "Xyce Simulation Plugin for KiCad"
requires-python = ">=3.12"
authors = [{ name = "SPICE Projects" }]
license = { text = "Apache-2.0" }

[project.urls]
Homepage = "https://github.com/spice-projects/kicad-xyce-plugin"
Repository = "https://github.com/spice-projects/kicad-xyce-plugin"
Issues = "https://github.com/spice-projects/kicad-xyce-plugin/issues"

[tool.hatch.build.targets.kicad-package]
name = "Xyce Simulation Plugin for KiCad"
description = "Xyce Simulation Plugin for KiCad"
description_full = "Xyce Simulation Plugin for KiCad - TODO: change this to a more detailed description"
identifier = "com.github.spice-projects.kicad-xyce-plugin"
status = "development"
kicad_version = "10.99"
icon = "plugin-icon-48x48.png"
download_url = "https://spice-projects.github.io/kicad-xyce-plugin/{zip_name}"
sources = ["src"]
include = [
  "src/**"
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
omit = ["shibokensupport/*"]
