[build-system]
requires = ["hatchling", "hatch-kicad"]
build-backend = "hatchling.build"

[project]
name = "kicad-xyce-plugin"
version = "0.1.0"
description = "Xyce Simulation Plugin for KiCad"
requires-python = ">=3.12"
authors = [{ name = "SPICE Projects" }]
license = { text = "Apache-2.0" }

[project.urls]
Homepage = "https://github.com/spice-projects/kicad-xyce-plugin"
Repository = "https://github.com/spice-projects/kicad-xyce-plugin"
Issues = "https://github.com/spice-projects/kicad-xyce-plugin/issues"

[project.scripts]
xyce-simulator = "xyce_simulator.run_simulator:main"

[tool.hatch.build.targets.wheel]
# xyce_simulator/ is a temporary directory created by the CI wheel build step.
# It is a renamed copy of src/ with a sys.path shim injected into __init__.py
# to preserve flat intra-module imports. It is never committed to the repo.
packages = ["xyce_simulator"]

[tool.hatch.build.targets.kicad-package]
name = "Xyce Simulation Plugin for KiCad"
description = "Xyce Simulation Plugin for KiCad"
description_full = "Xyce Simulation Plugin for KiCad - TODO: change this to a more detailed description"
identifier = "com.github.spice-projects.kicad-xyce-plugin"
version = "2.0.0"
status = "development"
kicad_version = "10.0"
icon = "plugin-icon-64x64.png"
download_url = "https://spice-projects.github.io/kicad-xyce-plugin/{zip_name}"
sources = ["src"]
include = [
  "src/**"
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
omit = ["shibokensupport/*"]
