[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kicad-xyce-plugin"
dynamic = ["version"]
description = "Xyce Simulation Plugin for KiCad"
requires-python = ">=3.10"
authors = [{ name = "SPICE Projects" }]
license = { text = "Apache-2.0" }
dependencies = [
  "dataclasses-json>=0.6.7",
  "kicad-python>=0.7.1",
  "numpy>=2.2.6",
  "PySide6>=6.11.1",
]

[project.urls]
Homepage = "https://github.com/spice-projects/kicad-xyce-plugin"
Repository = "https://github.com/spice-projects/kicad-xyce-plugin"
Issues = "https://github.com/spice-projects/kicad-xyce-plugin/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/kicad_xyce_plugin"]

[tool.hatch.version]
source = "env"
variable = "PACKAGE_VERSION"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
omit = ["shibokensupport/*"]
